# yourCityIsInvadedByAliens

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  TARGETS.md  build_simple.sh  clean.sh  msvc2015x86_build_simple.bat  msvc2022_build_simple.bat  voices.txt  win_mingw_build_simple.bat  win_msvc_build_simple.bat  wsjcpp.yml
contrib/code-stats/: stats.sh
contrib/doxygen/: Doxyfile  README.md  run.sh
docs/: INTERESTING.md  TEXHNICAL_AND_PLANS.md
map/: convert_map.py
res/: data.json
res/app/: translates.json
res/app/music/: playlists.json
res/asset-factories-bootscreen/bootscreen-background1/: asset-factory.json
res/asset-factories-bootscreen/font1/: asset-factory.json
res/asset-factories-bootscreen/logo1/: asset-factory.json
res/asset-factories-bootscreen/progressbar1/: asset-factory.json
res/asset-factories-bootscreen/text1/: asset-factory.json
res/asset-factories-first/font1/: asset-factory.json
res/asset-factories/background1/: asset-factory.json
res/asset-factories/background2/: asset-factory.json
res/asset-factories/berry1/: asset-factory.json
res/asset-factories/biobomb1/: asset-factory.json
res/asset-factories/bioplasm1/: asset-factory.json
res/asset-factories/building1/: asset-factory.json
res/asset-factories/building2/: asset-factory.json
res/asset-factories/building3/: asset-factory.json
res/asset-factories/building4/: asset-factory.json
res/asset-factories/building5/: asset-factory.json
res/asset-factories/clouds1/: asset-factory.json
res/asset-factories/disalog_help1/: asset-factory.json
res/asset-factories/font1/: asset-factory.json
res/asset-factories/game-over-screen/: asset-factory.json
res/asset-factories/help1/: asset-factory.json
res/asset-factories/minimap1/: asset-factory.json
res/asset-factories/road1/: asset-factory.json
res/asset-factories/screen_border_attach_highlight/: asset-factory.json
res/asset-factories/tank1/: asset-factory.json
res/buildings/tower0/: info.json
res/default/: buildings.json  fonts.json  generate_buildings_along_the_roads.py  generate_roads.py  generate_vegetation_along_the_roads_and_buildings.py  map.json  roads.json  transports.json  vegetations.json
res/default/sprites/: alien-ship0.json
res/fonts/fff/: Magnus Cederholm License.txt
res/maps/: map0.json
src/: entity.cpp  main.cpp  main_controller.cpp  main_controller.h  renderwindow.cpp
src-images/: alien-ship.xcf  alien-ship0.xcf  alient-bioplast.xcf  background.xcf  building-block.xcf  button-start.xcf  cloud0.xcf  dialog-background.xcf  left-panel-info.xcf  loader-screen.xcf  mouse-target.xcf  music-on-off.xcf  power.xcf  radar-background.xcf  road0.xcf  rocket.xcf  tank0.xcf
src-images/buildings/: tower0.xcf
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/nlohmann_json/: wsjcpp.hold.yml
src.wsjcpp/sea5kg_triangulation/: sea5kg_triangulation.cpp  sea5kg_triangulation.h  wsjcpp.hold.yml
src.wsjcpp/wsjcpp_core/: wsjcpp_core.cpp  wsjcpp_core.h
src/Roads2DGenerator/: Roads2DGenerator.cpp  Roads2DGenerator.h
src/ShootingStrategy/: shooting_strategy.h
src/SimpleNeuralNetworkCpp/: SimpleNeuralNetwork.cpp  SimpleNeuralNetwork.h
src/ai/: ai_object.cpp  ai_object.h  ai_tank0.cpp  ai_tank0.h  main_ai_thread.cpp  main_ai_thread.h
src/configs/: config_default_map.cpp  config_default_map.h
src/controllers/: loader_controller.cpp  loader_controller.h  main_controller.cpp  main_controller.h  sound_controller.cpp  sound_controller.h
src/game/: coordxy.cpp  coordxy.h  game.cpp  game.h  game_alien_berry_state.cpp  game_alien_berry_state.h  game_alien_ship_state.cpp  game_alien_ship_state.h  game_bioplast_state.cpp  game_bioplast_state.h  game_building.cpp  game_building.h  game_cloud0_state.cpp  game_cloud0_state.h  game_rocket_state.cpp  game_rocket_state.h  game_state.cpp  game_state.h  game_tank0_state.cpp  game_tank0_state.h  move_object_direction.cpp  move_object_direction.h  random_shooting.cpp  random_shooting.h  random_shooting_strategy.cpp  random_shooting_strategy.h  shooting_strategy.cpp  shooting_strategy.h
src/include/: Entity.hpp  Math.hpp  RenderWindow.hpp
src/render/: render.cpp  render.h  render_alienship.h  render_background.cpp  render_background.h  render_base.cpp  render_base.h  render_bioplast.cpp  render_bioplast.h  render_bootscreen_progressbar.cpp  render_bootscreen_progressbar.h  render_button_music_on_off.cpp  render_button_music_on_off.h  render_button_simple.cpp  render_button_simple.h  render_cloud0.cpp  render_cloud0.h  render_dialog.cpp  render_dialog.h  render_left_panel_info.cpp  render_left_panel_info.h  render_player_alient_ship.cpp  render_player_alient_ship.h  render_player_power.cpp  render_player_power.h  render_road0.cpp  render_road0.h  render_rocket.cpp  render_rocket.h  render_tank0.cpp  render_tank0.h  render_ui.h  render_window.cpp  render_window.h
src/render/alienship/: render_alienship0.cpp  render_alienship0.h  render_bioplast.cpp  render_bioplast.h
src/utils/: utils_loader_screen.cpp  utils_loader_screen.h  utils_music_player.cpp  utils_music_player.h  utils_start_dialog.cpp  utils_start_dialog.h
src/yassets/: yasset_text.cpp  yasset_text.h  yassets.h  yassets_alien.h  yassets_buildings.h  yassets_fabric_type_font.cpp  yassets_fabric_type_font.h  yassets_roads.h  yassets_service.cpp  yassets_service.h  yassets_transports.h  yassets_ui.h  yassets_weapons.h  yassets_weather.h
src/yassets_factories/: yassets_factory_type_font.cpp  yassets_factory_type_font.h  yassets_factory_type_font50x50.cpp  yassets_factory_type_font50x50.h
src/ycore/: coordxy.cpp  coordxy.h  ycore.cpp  ycore.h  yjson.cpp  yjson.h  ykeyboard.cpp  ykeyboard.h  ylog.cpp  ylog.h  ypos.cpp  ypos.h  yrect.cpp  yrect.h
src/yservices/: map_yservice.cpp  map_yservice.h  settings_yservice.cpp  settings_yservice.h  window_yservice.cpp  window_yservice.h  yassets_service.cpp  yassets_service.h  yservices.cpp  yservices.h
tests/: CMakeLists.txt  test_yrect_intersection.cpp
unit-tests.wsjcpp/: CMakeLists.txt
unit-tests.wsjcpp/src/: unit_test_coord_x_y.cpp
(+95 files in other folders)
